[gd_scene load_steps=10 format=3 uid="uid://cwqcvu7s6os82"]

[ext_resource type="Script" uid="uid://iyehc25lxq7n" path="res://player/main_character.gd" id="1_3ss8c"]
[ext_resource type="PackedScene" uid="uid://13uumpp06k0f" path="res://ability_manager/ability_manager.tscn" id="2_laib5"]
[ext_resource type="Texture2D" uid="uid://dyap3rg4rsdeo" path="res://icon.svg" id="2_psv4h"]
[ext_resource type="PackedScene" uid="uid://c7btvr4nvo7tr" path="res://components/platformer_move/platformer_move.tscn" id="3_xw5xi"]
[ext_resource type="PackedScene" uid="uid://bbny0t2enesfk" path="res://state_machine/state_machine.tscn" id="4_gc0vm"]
[ext_resource type="Script" uid="uid://cfevak5oev0bn" path="res://player/walk_state.gd" id="5_vidoq"]
[ext_resource type="Script" uid="uid://bk2dji88yt4r2" path="res://player/jump_1.gd" id="6_vidoq"]
[ext_resource type="Script" uid="uid://bt3m4wrninwtv" path="res://player/jump_2.gd" id="7_laib5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_laib5"]

[node name="MainCharacter" type="CharacterBody2D"]
script = ExtResource("1_3ss8c")

[node name="AbilityManager" parent="." instance=ExtResource("2_laib5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_laib5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_psv4h")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="PlatformerMove" parent="." node_paths=PackedStringArray("host") instance=ExtResource("3_xw5xi")]
host = NodePath("..")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_gc0vm")]
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_vidoq")

[node name="Jump1" type="Node" parent="StateMachine"]
script = ExtResource("6_vidoq")

[node name="Jump2" type="Node" parent="StateMachine"]
script = ExtResource("7_laib5")
